--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,11 @@ repositories {
     mavenCentral()
 }
 
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
 dependencies {
+
     testImplementation group: 'org.testng', name: 'testng', version: '6.14.3'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
