--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /multiInst
 /-
 logs
+*.log
 .errorScreenshots
 # Created by https://www.toptal.com/developers/gitignore/api/windows,maven,gradle,intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,maven,gradle,intellij
