--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,9 @@ dependencies {
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.8.1'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
     implementation group: 'org.aeonbits.owner', name: 'owner-java8', version: '1.0.10'
+    testImplementation("org.assertj:assertj-core:3.21.0")
 }
 
 test {
-
+    useTestNG()
 }
