WebDriverFactory/User.properties/UserDto fix

--- a/src/main/resources/User.properties
+++ b/src/main/resources/User.properties
@@ -1,4 +1,4 @@
-firstName = Илья 
+firstName = Илья
 lastName = Пантиков
 name = ilya
 dataBirth = 05.07.1996
@@ -6,3 +6,10 @@ numberPhone1 = +79999999999
 numberPhone2 = +79999999999
 company = ПАО Абсолют банк
 work = QA Engineer
+country = Россия
+city = Москва
+levelEnglish = Элементарный уровень (Elementary)
+email = pantik96@mail.ru
+communicationMethodTelegram = Тelegram
+communicationMethodWhatsApp = WhatsApp
+genderM = Мужской
