--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 logs
 *.log
 .errorScreenshots
+folder errorScreenshots
 # Created by https://www.toptal.com/developers/gitignore/api/windows,maven,gradle,intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,maven,gradle,intellij
 
